--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <div class="card-text">
                                 <p class="pokemon-name">Charmander</p>
                                 <p class="pokemon-coin">
-                                    <img class="pokemon-img" src="https://fire-pokestore.web.app/assets/images/pokecoin.png">
+                                    <img class="pokemon-img" src="/assets/images/pokecoin.png">
                                     <span>4 Moedas Pokemon</span>
                                 </p>
                                 <button class="bt-add-pokemon" type="button"> Adicionar Pokemon</button>
@@ -69,7 +69,7 @@
                             <div class="card-text">
                                 <p class="pokemon-name">Charmeleon</p>
                                 <p class="pokemon-coin">
-                                    <img class="pokemon-img" src="https://fire-pokestore.web.app/assets/images/pokecoin.png">
+                                    <img class="pokemon-img" src="/assets/images/pokecoin.png">
                                     <span>4 Moedas Pokemon</span>
                                 </p>
                                 <button class="bt-add-pokemon" type="button"> Adicionar Pokemon</button>
@@ -85,7 +85,7 @@
                             <div class="card-text">
                                 <p class="pokemon-name">Charizard</p>
                                 <p class="pokemon-coin">
-                                    <img class="pokemon-img" src="https://fire-pokestore.web.app/assets/images/pokecoin.png">
+                                    <img class="pokemon-img" src="/assets/images/pokecoin.png">
                                     <span>4 Moedas Pokemon</span>
                                 </p>
                                 <button class="bt-add-pokemon" type="button"> Adicionar Pokemon</button>
@@ -101,7 +101,7 @@
                             <div class="card-text">
                                 <p class="pokemon-name">Vulpix</p>
                                 <p class="pokemon-coin">
-                                    <img class="pokemon-img" src="https://fire-pokestore.web.app/assets/images/pokecoin.png">
+                                    <img class="pokemon-img" src="/assets/images/pokecoin.png">
                                     <span>4 Moedas Pokemon</span>
                                 </p>
                                 <button class="bt-add-pokemon" type="button"> Adicionar Pokemon</button>
@@ -117,7 +117,7 @@
                             <div class="card-text">
                                 <p class="pokemon-name">Ninetales</p>
                                 <p class="pokemon-coin">
-                                    <img class="pokemon-img" src="https://fire-pokestore.web.app/assets/images/pokecoin.png">
+                                    <img class="pokemon-img" src="/assets/images/pokecoin.png">
                                     <span>4 Moedas Pokemon</span>
                                 </p>
                                 <button class="bt-add-pokemon" type="button"> Adicionar Pokemon</button>
@@ -133,7 +133,7 @@
                             <div class="card-text">
                                 <p class="pokemon-name">Growlithe</p>
                                 <p class="pokemon-coin">
-                                    <img class="pokemon-img" src="https://fire-pokestore.web.app/assets/images/pokecoin.png">
+                                    <img class="pokemon-img" src="/assets/images/pokecoin.png">
                                     <span>4 Moedas Pokemon</span>
                                 </p>
                                 <button class="bt-add-pokemon" type="button"> Adicionar Pokemon</button>
@@ -149,7 +149,7 @@
                             <div class="card-text">
                                 <p class="pokemon-name">Arcanine</p>
                                 <p class="pokemon-coin">
-                                    <img class="pokemon-img" src="https://fire-pokestore.web.app/assets/images/pokecoin.png">
+                                    <img class="pokemon-img" src="/assets/images/pokecoin.png">
                                     <span>4 Moedas Pokemon</span>
                                 </p>
                                 <button class="bt-add-pokemon" type="button"> Adicionar Pokemon</button>
@@ -165,7 +165,7 @@
                             <div class="card-text">
                                 <p class="pokemon-name">Ponyta</p>
                                 <p class="pokemon-coin">
-                                    <img class="pokemon-img" src="https://fire-pokestore.web.app/assets/images/pokecoin.png">
+                                    <img class="pokemon-img" src="/assets/images/pokecoin.png">
                                     <span>4 Moedas Pokemon</span>
                                 </p>
                                 <button class="bt-add-pokemon" type="button"> Adicionar Pokemon</button>
@@ -181,7 +181,7 @@
                             <div class="card-text">
                                 <p class="pokemon-name">Rapidash</p>
                                 <p class="pokemon-coin">
-                                    <img class="pokemon-img" src="https://fire-pokestore.web.app/assets/images/pokecoin.png">
+                                    <img class="pokemon-img" src="/assets/images/pokecoin.png">
                                     <span>4 Moedas Pokemon</span>
                                 </p>
                                 <button class="bt-add-pokemon" type="button"> Adicionar Pokemon</button>
@@ -197,7 +197,7 @@
                             <div class="card-text">
                                 <p class="pokemon-name">Magmar</p>
                                 <p class="pokemon-coin">
-                                    <img class="pokemon-img" src="https://fire-pokestore.web.app/assets/images/pokecoin.png">
+                                    <img class="pokemon-img" src="/assets/images/pokecoin.png">
                                     <span>4 Moedas Pokemon</span>
                                 </p>
                                 <button class="bt-add-pokemon" type="button"> Adicionar Pokemon</button>
@@ -213,7 +213,7 @@
                             <div class="card-text">
                                 <p class="pokemon-name">Flareon</p>
                                 <p class="pokemon-coin">
-                                    <img class="pokemon-img" src="https://fire-pokestore.web.app/assets/images/pokecoin.png">
+                                    <img class="pokemon-img" src="/assets/images/pokecoin.png">
                                     <span>4 Moedas Pokemon</span>
                                 </p>
                                 <button class="bt-add-pokemon" type="button"> Adicionar Pokemon</button>
@@ -229,7 +229,7 @@
                             <div class="card-text">
                                 <p class="pokemon-name">Moltres</p>
                                 <p class="pokemon-coin">
-                                    <img class="pokemon-img" src="https://fire-pokestore.web.app/assets/images/pokecoin.png">
+                                    <img class="pokemon-img" src="/assets/images/pokecoin.png">
                                     <span>4 Moedas Pokemon</span>
                                 </p>
                                 <button class="bt-add-pokemon" type="button"> Adicionar Pokemon</button>
@@ -245,7 +245,7 @@
                             <div class="card-text">
                                 <p class="pokemon-name">Cyndaquil</p>
                                 <p class="pokemon-coin">
-                                    <img class="pokemon-img" src="https://fire-pokestore.web.app/assets/images/pokecoin.png">
+                                    <img class="pokemon-img" src="/assets/images/pokecoin.png">
                                     <span>4 Moedas Pokemon</span>
                                 </p>
                                 <button class="bt-add-pokemon" type="button"> Adicionar Pokemon</button>
@@ -261,7 +261,7 @@
                             <div class="card-text">
                                 <p class="pokemon-name">Quilava</p>
                                 <p class="pokemon-coin">
-                                    <img class="pokemon-img" src="https://fire-pokestore.web.app/assets/images/pokecoin.png">
+                                    <img class="pokemon-img" src="/assets/images/pokecoin.png">
                                     <span>4 Moedas Pokemon</span>
                                 </p>
                                 <button class="bt-add-pokemon" type="button"> Adicionar Pokemon</button>
@@ -277,7 +277,7 @@
                             <div class="card-text">
                                 <p class="pokemon-name">Typhlosion</p>
                                 <p class="pokemon-coin">
-                                    <img class="pokemon-img" src="https://fire-pokestore.web.app/assets/images/pokecoin.png">
+                                    <img class="pokemon-img" src="/assets/images/pokecoin.png">
                                     <span>4 Moedas Pokemon</span>
                                 </p>
                                 <button class="bt-add-pokemon" type="button"> Adicionar Pokemon</button>
@@ -293,7 +293,7 @@
                             <div class="card-text">
                                 <p class="pokemon-name">Slugma</p>
                                 <p class="pokemon-coin">
-                                    <img class="pokemon-img" src="https://fire-pokestore.web.app/assets/images/pokecoin.png">
+                                    <img class="pokemon-img" src="/assets/images/pokecoin.png">
                                     <span>4 Moedas Pokemon</span>
                                 </p>
                                 <button class="bt-add-pokemon" type="button"> Adicionar Pokemon</button>
